--- a/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-user-auth
 type: Opaque
 stringData:
-    username: ENC[AES256_GCM,data:84jX/WY=,iv:lz8OtC0o+UGlGfDt0vQuvf5M0tviCTxwapvHt2wKVcQ=,tag:ZQIBepRj8gwK4Vcxobqq/A==,type:str]
-    password: ENC[AES256_GCM,data:nQhQtylTscMqU+rJrAynnFm40+5/3QO9ICDMFToldoaLhz7v43CYEoWO7QkwDhPYjt3iPqWG+GmVWe1/,iv:1DN4KkqSrqNb9YoRpsoXRF/Z3H+e18+cbyjkwdbHfo4=,tag:iKb8LSFsUdCTgBMo7yEF3g==,type:str]
+    username: ENC[AES256_GCM,data:3D9IXEM=,iv:pioHNSy5P1O/W2ljg/dajiw/hjo3Jb67Q4vjNDj29Mc=,tag:CluVqHKofpn32sXhGqH9sg==,type:str]
+    password: ENC[AES256_GCM,data:gwdNwtMOx6YwZi1+qTTLvutnLy5cLOuNGGmOqpZ1P2cs9vl6E1HiHAJc818VHvwzr18rvI3VdltH8gN7,iv:wRk9ehsFKzZFJ8aMODIO1efHKHUlVpHNJKq7O7kWkm0=,tag:I2A11VN9NZXFMDjmUEeKZg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age19ufzusf8ls394p4kl5498myl24w7x6ggc5w9grq4tk8dcyh709ls6ku97r
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0UWpzOFk2d25DVEpxQWxE
-            TDlmZDRwTy9jazB2eEd4ZGZqR21paDRKaVR3CnI0bi9kbzFwM0hWNWJMU1AvR094
-            c2FkNFV2eW1GcVd5c3JtVWFHa284R1EKLS0tIEhIdXF0eDJxMUxiU05HVVNHa01r
-            OVg2MnRWL2JlK1BBc0NoempOK2J6K1kKiRq4ugF0GO9/l1Wq+vAHlJ1cCC7CmSVR
-            M1uSQK3JoxFSBRTFDCXTPiz1Ys0ugz19p8rBVVXsyMM0l6wUBefU9Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiY1BDd2VwZ0MrTnRSK3hN
+            NnVYMWtrckJ2Ykk3MUZnRlpLcDdhMDlnSFJVCnJYbmxxZ1ExL3kxUnp1MGttQ01n
+            YUcyUmkvWWZnYmZKcEl6RE1Zd0h5YTAKLS0tIGFhZVA5NGNVQWtaZlp5UUJ0RUtx
+            b1pWNWFIUDlucElUNUwxYjVjaVVPbG8K6jYURecEOn2N+DozuqDnG1GRJJQYn/TU
+            lpF7rBfWmPd0QXTp0BYeoSlcctiOzMjGBontlxjdmk36uGAQdr3BVw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-01-19T07:55:42Z"
-    mac: ENC[AES256_GCM,data:v1ZNZqyWXBdI/GxdfaB1ERedOgn5l0cRXHmKCDbZshuBNXct7y1dnmrtBbBmeMYO7QaJwtBZRs4MTixhxY24agXPaw9XG5qekETvDptVXWxtMe8ZC1A7v8kRGlxvznc9dBk+HqT2an54jiXx3yDbE5r5czf1349M08RhLy3tHQE=,iv:5vh+ZCWGPOZ1h612M3DPjpplGR0ASPzJeRpZapqCgA0=,tag:oZnq/+JzA38LAffsPphPYg==,type:str]
+    lastmodified: "2024-01-19T23:48:48Z"
+    mac: ENC[AES256_GCM,data:Q6feuY/fUBAOdFjrV/n7ySeUwtFWX/VC9wTn+S1sfwEjslBmxBT3+teA+4F6dVkEKO+Iws+2Ntm4MJI1Ub3jQrEwOclSTxJcN2gXwW50COB8yb1AV/22x4Gc98T4vhK6EMf8IQGaAEvacKRzZoDdjLwbN/HiaX3YgoIx1hMutmQ=,iv:eN5i03/lldl92EiNsXHTA75Zdpzj5S2auNPjT6lOGdU=,tag:K5MznD8Odf1InXlu8Zx4kQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
