--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: cluster-secrets-user
     namespace: flux-system
 stringData:
-    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:zHbie01XJzhXvDL+,iv:DtSVDwBrj19SSep7M6UOVEBk7n5Ov6mNIdn9zMLFnd8=,tag:zF3jYDomGQdlsZqDaGw4TA==,type:str]
+    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:AtllW/sct4WhYDhd,iv:27fSNU48YK1ZgbrkLh8/oIHIU14ge+i7KoXZ16mPRoo=,tag:TRHAkBeus9CyF6ZXgh7FyA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,14 +14,14 @@ sops:
         - recipient: age19ufzusf8ls394p4kl5498myl24w7x6ggc5w9grq4tk8dcyh709ls6ku97r
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsSDRMZmE2R0U0UFBhOEhT
-            OUdtWXA2ZW1qWERJRGtiZFNNVGl2WW0wTlU4Cmc3L1ZSZ0U4OGdtb21CYUFDNXM3
-            RUV3T1JaT2hRcG5EbHY4UGsvVzBhNlEKLS0tIDJuazNEUXlXaUNEMnVaV0VrcS9P
-            ZFNETHNxR3NORzlTUUdvdDg3YUtUeGcKA9mUsS2+fpzRUfwM4LeINUPr4egUsNwv
-            IuBsiO6MRaT3wb1I3vRa2ehl1H4wPGfVqfV7DBgwaCH+1jrGKfrBiA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2QW1CSmlpMSsrTTlUeC9o
+            MHRSM0J0Y3NmWkF3blRNWEdNZGxOcFhDakJ3CjVRNHZMblhkL3BWVUl3aEw2dmR1
+            MEl0RTRZeHJnWlMyajFZQWF0dERLd2sKLS0tIFJwSldscFRUOTVBWVNGeGFNTXRU
+            d3dIaEMyQjIreGgxbW5selo4U1ZzcE0KvUr+JDOyWzYtbQBjQ7Mw1UDAODdPQ3YN
+            6fCj3TVBsUWAk7qdE+HJ6hGBtXiqcmUS77r9oj4WSD1Eqo/ZqUdmLQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-01-19T07:55:42Z"
-    mac: ENC[AES256_GCM,data:E17Csq0ivkiJjKAgjHeFdtcxVgAoth0jeiNs3rWYL6Dp3WOzCVOyDwHvbICOsprCwrzam1RbNreT/iMtM0aZGWaqYMTps9Rr2nM/djTCku+U/xOHVWupQIX4RPEU+mWMTRW1rEEtcGo0Hde5aU51pJN+X9wNkXiQRUD4GEKGG0E=,iv:jNlxkzKopDCy29JXy2qZwSsoRyjhG55Jd5r7h3Eg+Z4=,tag:OMgtIZhY7UeFcgF8lxAN0A==,type:str]
+    lastmodified: "2024-01-19T23:48:48Z"
+    mac: ENC[AES256_GCM,data:neo8MJrXznytugPi8GQs1jD5ENqTulqTjF53b6sfk40lr/Q53TnGdqsDV4bQOGb5ThZf16M2rox51ITUWANKzmA12DYQPHWjF6OnXKnN6ZYoLgBQzwAJVUldOq4eqIV9ka+EXaDtpahqRPUcoLeLLLw7r0FtclB9z7G1bBdMeXU=,iv:elbkOitVMRwcnO1l1ntXXM1fQnmT6SuAwMdTdPZEZ/g=,tag:VJVuzUjhOGh+YyECefI/+g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
