--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:eEnCZocO4CQ=,iv:sbKFCVerbO2ftyPiEVHRRJLjNNtIqNYDoUb13OI8inw=,tag:BMu717TD9mzzgZULpKJ31w==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:s8+D4aZRksYtFhPJSgmtoncXYqhFbg==,iv:n4O/4K1ZDbSlgsFhskrCYzw8v7sReBfr5bs27JGhgRE=,tag:woqJlOPElbQYitG7z1sYlw==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:J+KOJHhxHeVI0pn17rmpVJL67VK5xlZ0Ols8gVyzdXSHMaEU,iv:zQEb5lz5/Oc3QLmbW7STdBSVJUGowqrh+tkd+B1sPMA=,tag:PbFYkYO3Gln/IJHWzH2Jxw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:ZF5ViRO6rJ8=,iv:Sl+z4wgQD4G2HrXO3KK8PF6W+6LlxFkkusLXl5CTk5c=,tag:bIdY5CJ7rzeP/v/9Yy8J7g==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:9Ec6eCi6Nrv4Iyfl8ZwW069brcySXQ==,iv:QLFMA7Z7L6+mWX5BQO4tN/1IrSS951BmzATtGxIBL40=,tag:LO0KIX+X1l9zpGlGSDH7Qg==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:s+UXwMku724wo2/bFT55WZdpasuYKB/L51HjRPvvo8Ci9RRB,iv:6LlIlmPg/MqYrVQqvp9qbXM/BshR+odnO/7aKr+Cx0Q=,tag:g9Rvzy2HI4hHwP4tzlJFog==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age19ufzusf8ls394p4kl5498myl24w7x6ggc5w9grq4tk8dcyh709ls6ku97r
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBakRFeld1QVZIeGprWWJW
-            RzIrZkVBbXE3ZHhxVjdYNjZPQ1B4ZmVOREJNCmhmMHRQVENyYUJYbHUxWkxtajhE
-            OTViVWE2OUVPcEh6cUwyR0h0amV3YmMKLS0tIDF3TXBGbjhHT1hDZ05OVzVwQVVy
-            QTVtclZOR05jU3h5eEJyVVhsekovZ1UK6djpTh6YbZ28czASorEVwJ8w8cnJbfdN
-            wgBgXhJcJBC5KkLv/7Ovh6SGy9d9+GcWGCg+15zjKsM0lwZMfaPD3g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZdFRlNGZ2UU9iU1NQR3ZX
+            VGQwazk0YXdrTHFYQVhjS20zb3ZJRGM0OVU0Ckxrb2FraTByQTAzV1NlTzFoZUEx
+            RlNaSnZ4dUhRdHlGM0ltbGxuaXJqZzAKLS0tIGpiUDJ1ZStxT0F5Z2dzNzYrQ0d0
+            ME5tTG40KytmTGt1dmxnWXlmYTJJWVEKqMpFc9IdpFtELfSA0FbpjtiQdPGDFk7L
+            AHZIiDtUtCVrntSMKKcbIKGl40OJSlz0OA1IEO+7H0HQF/9UK7n92w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-01-19T07:55:42Z"
-    mac: ENC[AES256_GCM,data:vwRgTTA0NFCR0ZpMg73J33gTCQbNFn8zYdrvnhQ2B00tjO4rg1azpIUb/2JPBD+lLKqOpgfXv4OuxpMclU1VF6fpI4yKZ9dLnEcDrBO8/yK3/+A+gmvU4T6dyqnW2ir2CigMzDArQs+6lTRffrco2KINjPr3QepIeaab0/LhPFI=,iv:6M7sTA7nJ5HTlw3KzJw/jYxp591pKCQ3/rMC2qseiUA=,tag:vTVoPjt7aSiUm/iFCKIXkg==,type:str]
+    lastmodified: "2024-01-19T23:48:49Z"
+    mac: ENC[AES256_GCM,data:8GF+9lSQlmkUkuapCtQ+kxmqD3vfEOo2Chn8pK9Ymy5Cfln/s5ZdK7fwRRpeURFjkIdF9oR2uLGH+JEhZYscFMFqR2ZEeVjj5IvVRkgAYRl3vZ5//Ec+V/Ev5tH7Fizdq4HDTDso5F7nUvszYsg8vVS00osJS1DQMRYPmkRU6J8=,iv:soY507Z9z4uhJLTbPzVGPV7MtANEP0hgbmcbjXAF9Ck=,tag:S+CzzIY2+/WhEzCbOT+IiQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
