feat: switch to prod certs

--- a/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-user-auth
 type: Opaque
 stringData:
-    username: ENC[AES256_GCM,data:3D9IXEM=,iv:pioHNSy5P1O/W2ljg/dajiw/hjo3Jb67Q4vjNDj29Mc=,tag:CluVqHKofpn32sXhGqH9sg==,type:str]
-    password: ENC[AES256_GCM,data:gwdNwtMOx6YwZi1+qTTLvutnLy5cLOuNGGmOqpZ1P2cs9vl6E1HiHAJc818VHvwzr18rvI3VdltH8gN7,iv:wRk9ehsFKzZFJ8aMODIO1efHKHUlVpHNJKq7O7kWkm0=,tag:I2A11VN9NZXFMDjmUEeKZg==,type:str]
+    username: ENC[AES256_GCM,data:7ybk93M=,iv:sJVhNOMTsjnoVWdYI+kp6Q0ovSRtrrd8apQgbg6e890=,tag:R0C1UDvB4AxPrpRywS0rGA==,type:str]
+    password: ENC[AES256_GCM,data:8V2jNCj28qMAl6WyANyN82UsYlI4TU88yuAjrEa5AF0O4Xvk6idETT67PXbkE0/rbvckzkAKaymrVsfE,iv:So4mPxLyzNBy6xNEcGmhj4aNilX29p8g5Glr4G5pa3M=,tag:7f6McMUNQ0KDzWDKiuqV2A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age19ufzusf8ls394p4kl5498myl24w7x6ggc5w9grq4tk8dcyh709ls6ku97r
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiY1BDd2VwZ0MrTnRSK3hN
-            NnVYMWtrckJ2Ykk3MUZnRlpLcDdhMDlnSFJVCnJYbmxxZ1ExL3kxUnp1MGttQ01n
-            YUcyUmkvWWZnYmZKcEl6RE1Zd0h5YTAKLS0tIGFhZVA5NGNVQWtaZlp5UUJ0RUtx
-            b1pWNWFIUDlucElUNUwxYjVjaVVPbG8K6jYURecEOn2N+DozuqDnG1GRJJQYn/TU
-            lpF7rBfWmPd0QXTp0BYeoSlcctiOzMjGBontlxjdmk36uGAQdr3BVw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqbjdXRDFUQWEzRVcwVUdz
+            dmsxL21oOGx4ZWZsRG5CVjdUem1vQldXdTFVCjFXUlJzT1R1dzJ1OUZyYTAzZng1
+            OS9pbjA0dFBLTmxmekp5c0JOUXlwdjQKLS0tIGJZdmRlVXVPQ0kwaW5vQVZ6Ykpa
+            SmZXMmVwVE1ubG9lMnNEYW93SU9VMlUKfXz2/BlQVIpb50g5bD/p9bzsyg53io/B
+            b8RCXrFUB6Y6oufIlZkjOIvk3dOwaoAUIAKvMKuVFRnHYWDXCRW0Yg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-01-19T23:48:48Z"
-    mac: ENC[AES256_GCM,data:Q6feuY/fUBAOdFjrV/n7ySeUwtFWX/VC9wTn+S1sfwEjslBmxBT3+teA+4F6dVkEKO+Iws+2Ntm4MJI1Ub3jQrEwOclSTxJcN2gXwW50COB8yb1AV/22x4Gc98T4vhK6EMf8IQGaAEvacKRzZoDdjLwbN/HiaX3YgoIx1hMutmQ=,iv:eN5i03/lldl92EiNsXHTA75Zdpzj5S2auNPjT6lOGdU=,tag:K5MznD8Odf1InXlu8Zx4kQ==,type:str]
+    lastmodified: "2024-01-22T08:30:40Z"
+    mac: ENC[AES256_GCM,data:gINxNTYUNgFXrcH5jVtH0Rbxt095dl1GeJG9eMitxtCEitk2XEkl8o/eZFNMH1IF3Ip01EM0VElowD95VG1vzsJJs7llyFej0TPMj+TOQqYjJ8DaiofOvQh2linafzZnyiYRFDTUE46eHUlHIFgPq9HvdDFzhWd8YuNB4ZxELHo=,iv:9W8O5HB44L9mPPEUExFvQ4H12+5WKmLc5CSPFx68hh4=,tag:DUdbmuPBqXXkQuYZ5MOZMQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
