--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: cluster-secrets-user
     namespace: flux-system
 stringData:
-    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:AtllW/sct4WhYDhd,iv:27fSNU48YK1ZgbrkLh8/oIHIU14ge+i7KoXZ16mPRoo=,tag:TRHAkBeus9CyF6ZXgh7FyA==,type:str]
+    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:rzV3QuS5pKkSl9kC,iv:ozqHpPU+0rMWWdiX2njn2c7f0ksSM454DTm0Hey7dMk=,tag:6JfigTIIlLbzpAibPf6KiA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,14 +14,14 @@ sops:
         - recipient: age19ufzusf8ls394p4kl5498myl24w7x6ggc5w9grq4tk8dcyh709ls6ku97r
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2QW1CSmlpMSsrTTlUeC9o
-            MHRSM0J0Y3NmWkF3blRNWEdNZGxOcFhDakJ3CjVRNHZMblhkL3BWVUl3aEw2dmR1
-            MEl0RTRZeHJnWlMyajFZQWF0dERLd2sKLS0tIFJwSldscFRUOTVBWVNGeGFNTXRU
-            d3dIaEMyQjIreGgxbW5selo4U1ZzcE0KvUr+JDOyWzYtbQBjQ7Mw1UDAODdPQ3YN
-            6fCj3TVBsUWAk7qdE+HJ6hGBtXiqcmUS77r9oj4WSD1Eqo/ZqUdmLQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqTCtQazQ3U3JQTFJsUXpj
+            MEYvWUN0ZnEvTm9XcWJ1NXQrYTdYZ2MwWmt3Ck55d2ZMMXpqemxrVWtMY0NpekFh
+            VkJtZzdDMW10NG0xYmRCOU1lczh5WXMKLS0tIGhIYlFOcWpMOVFqMnhYS1NBc0Jq
+            NTE5cUdtVTJXMHdLbmZCdTAxam01cGsK9foMwScOjQgPuksD5HauxBdQiRwxlJoL
+            vZP6x3ZCtTgAY289oM3t4eE4v3amuOfR7FOpYZIeoPv7aNPWp590rQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-01-19T23:48:48Z"
-    mac: ENC[AES256_GCM,data:neo8MJrXznytugPi8GQs1jD5ENqTulqTjF53b6sfk40lr/Q53TnGdqsDV4bQOGb5ThZf16M2rox51ITUWANKzmA12DYQPHWjF6OnXKnN6ZYoLgBQzwAJVUldOq4eqIV9ka+EXaDtpahqRPUcoLeLLLw7r0FtclB9z7G1bBdMeXU=,iv:elbkOitVMRwcnO1l1ntXXM1fQnmT6SuAwMdTdPZEZ/g=,tag:VJVuzUjhOGh+YyECefI/+g==,type:str]
+    lastmodified: "2024-01-22T08:30:40Z"
+    mac: ENC[AES256_GCM,data:pY7uFQqEkkYB//GgY1/KZ2liX1y0N81aD6eMkKdYfFz40mKXZla1F62oKhQbZkgo4ICArDQkucJCveTFJ+LvYBTt1/hOZQxNRzL+TL8HygzdLGdpbT7tQaheUpCh9F58qGpV6FnpSa39E5pEzkRguX485XG6tMC2ehuYqFRvDG8=,iv:hpuXsaBKr/KsMkMcViEcfwYsxNTOlxxC7f1SRwr/vU0=,tag:32e/5TcQpqi9fUZ6IAWDpw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
