--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:ZF5ViRO6rJ8=,iv:Sl+z4wgQD4G2HrXO3KK8PF6W+6LlxFkkusLXl5CTk5c=,tag:bIdY5CJ7rzeP/v/9Yy8J7g==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:9Ec6eCi6Nrv4Iyfl8ZwW069brcySXQ==,iv:QLFMA7Z7L6+mWX5BQO4tN/1IrSS951BmzATtGxIBL40=,tag:LO0KIX+X1l9zpGlGSDH7Qg==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:s+UXwMku724wo2/bFT55WZdpasuYKB/L51HjRPvvo8Ci9RRB,iv:6LlIlmPg/MqYrVQqvp9qbXM/BshR+odnO/7aKr+Cx0Q=,tag:g9Rvzy2HI4hHwP4tzlJFog==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:E6u5UVeWQkI=,iv:2mprLcME7ZjAgedTOsODJWnw1lg5h9nqVAJLea7JfDo=,tag:d8s9at3JMI0MqZZ6g/ao3A==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:NhM28mBwKhUn1MzQ0HA1Qo39y6QydQ==,iv:dV0H9zqd/KYKsgw93G5MsLpORlGI0A8ylW6dop3J7o0=,tag:kSpz2qtvlARlstbpI1CavA==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:WCxQCEPzAtu2eeQSryuv/EMYFlQVWoHDwFx8fJLye42QTDse,iv:h67o2tY+reEwIiCU3jMSgKiBUBJfoQsJUKl2cIB3xhg=,tag:qkmyTLBeZFb7iy+E+DJQkg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age19ufzusf8ls394p4kl5498myl24w7x6ggc5w9grq4tk8dcyh709ls6ku97r
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZdFRlNGZ2UU9iU1NQR3ZX
-            VGQwazk0YXdrTHFYQVhjS20zb3ZJRGM0OVU0Ckxrb2FraTByQTAzV1NlTzFoZUEx
-            RlNaSnZ4dUhRdHlGM0ltbGxuaXJqZzAKLS0tIGpiUDJ1ZStxT0F5Z2dzNzYrQ0d0
-            ME5tTG40KytmTGt1dmxnWXlmYTJJWVEKqMpFc9IdpFtELfSA0FbpjtiQdPGDFk7L
-            AHZIiDtUtCVrntSMKKcbIKGl40OJSlz0OA1IEO+7H0HQF/9UK7n92w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQZnVTZlJzNkRFSVpPMElY
+            V2hhVXc3Ui9uQVRIU3JjZ25IVXBqSjNqSm5FCmNTTDJoeFdSbWhJdTJGMWhSUmtM
+            VkdscVM5cStSWWhhV1djcUNYbjVQQm8KLS0tICszOWc5bWVJTUNOUkorYmdsY2hj
+            ZXRRTW5UWEhhejRXSWxKcEpxaXgyejQKihlcAIHYlkrN6/o0Qm89j1hQ9i+Cbgwb
+            Nat8DNxVARre3eiv2QyWapKCCGhjUNAgfUwNQMqWStT7anNZGfFt5w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-01-19T23:48:49Z"
-    mac: ENC[AES256_GCM,data:8GF+9lSQlmkUkuapCtQ+kxmqD3vfEOo2Chn8pK9Ymy5Cfln/s5ZdK7fwRRpeURFjkIdF9oR2uLGH+JEhZYscFMFqR2ZEeVjj5IvVRkgAYRl3vZ5//Ec+V/Ev5tH7Fizdq4HDTDso5F7nUvszYsg8vVS00osJS1DQMRYPmkRU6J8=,iv:soY507Z9z4uhJLTbPzVGPV7MtANEP0hgbmcbjXAF9Ck=,tag:S+CzzIY2+/WhEzCbOT+IiQ==,type:str]
+    lastmodified: "2024-01-22T08:30:40Z"
+    mac: ENC[AES256_GCM,data:fAZx8v/qFk/0lY3bYPKe0hG+fUG6Vfnu6u8cyWpKi3D6A+/crjJwegBfAp+zzCW0XZkdVv3sqnevzxsRZLVFHYRk3hW20FJkDoFDIiHUxrupJE7j5L0SGpD+caoBsLcYXs+3fowu2/nNFi/9l0jG7lThDKbAS97/qZMR2alEzNo=,iv:j6KmBl8Zhg8YuKIeo6G5+uMNiZ7jAFABnKnPgKE2HZ0=,tag:CAvN8++lyD7dI6t0TBz1Rg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
